--- a/css/mobile.css
+++ b/css/mobile.css
@@ -277,6 +277,92 @@ table {
   color: #dc322f;
   font-weight: bold; }
 
+nav.bourbon {
+  *zoom: 1;
+  -webkit-font-smoothing: antialiased;
+  background-color: #5b5e63;
+  padding: 0 2em 0 1em; }
+  nav.bourbon:before, nav.bourbon:after {
+    content: " ";
+    display: table; }
+  nav.bourbon:after {
+    clear: both; }
+  @media screen and (max-width: 31.875em) {
+    nav.bourbon {
+      padding: 0; } }
+  nav.bourbon ul {
+    text-align: center; }
+    @media screen and (min-width: 56.3125em) {
+      nav.bourbon ul {
+        float: left;
+        text-align: left; } }
+  nav.bourbon li {
+    display: inline-block; }
+  nav.bourbon a {
+    background-position: 1em center;
+    background-repeat: no-repeat;
+    color: #fff;
+    display: inline-block;
+    font-weight: bold;
+    padding: 1em 1em 1em 3em; }
+    @media screen and (max-width: 32.1875em) {
+      nav.bourbon a {
+        padding: .75em .5em;
+        text-align: center; } }
+    @media screen and (max-width: 56.25em) {
+      nav.bourbon a {
+        display: block; } }
+    nav.bourbon a:hover {
+      background-color: #434548;
+      text-decoration: none; }
+    nav.bourbon a.current {
+      background-color: #4f5156; }
+    nav.bourbon a.bourbon {
+      background-image: url("/images/bourbon-nav/bourbon.png"); }
+      @media only screen and (-webkit-min-device-pixel-ratio: 1.3), only screen and (min--moz-device-pixel-ratio: 1.3), only screen and (-o-min-device-pixel-ratio: 1.3 / 1), only screen and (min-resolution: 125dpi), only screen and (min-resolution: 1.3dppx) {
+        nav.bourbon a.bourbon {
+          background-image: url("/images/bourbon-nav/bourbon@2x.png"); } }
+      @media screen and (max-width: 32.1875em) {
+        nav.bourbon a.bourbon {
+          background-image: none; } }
+    nav.bourbon a.neat {
+      background-image: url("/images/bourbon-nav/neat.png"); }
+      @media only screen and (-webkit-min-device-pixel-ratio: 1.3), only screen and (min--moz-device-pixel-ratio: 1.3), only screen and (-o-min-device-pixel-ratio: 1.3 / 1), only screen and (min-resolution: 125dpi), only screen and (min-resolution: 1.3dppx) {
+        nav.bourbon a.neat {
+          background-image: url("/images/bourbon-nav/neat@2x.png"); } }
+      @media screen and (max-width: 32.1875em) {
+        nav.bourbon a.neat {
+          background-image: none; } }
+    nav.bourbon a.bitters {
+      background-image: url("/images/bourbon-nav/bitters.png"); }
+      @media only screen and (-webkit-min-device-pixel-ratio: 1.3), only screen and (min--moz-device-pixel-ratio: 1.3), only screen and (-o-min-device-pixel-ratio: 1.3 / 1), only screen and (min-resolution: 125dpi), only screen and (min-resolution: 1.3dppx) {
+        nav.bourbon a.bitters {
+          background-image: url("/images/bourbon-nav/bitters@2x.png"); } }
+      @media screen and (max-width: 32.1875em) {
+        nav.bourbon a.bitters {
+          background-image: none; } }
+    nav.bourbon a.refills {
+      background-image: url("/images/bourbon-nav/refills.png"); }
+      @media only screen and (-webkit-min-device-pixel-ratio: 1.3), only screen and (min--moz-device-pixel-ratio: 1.3), only screen and (-o-min-device-pixel-ratio: 1.3 / 1), only screen and (min-resolution: 125dpi), only screen and (min-resolution: 1.3dppx) {
+        nav.bourbon a.refills {
+          background-image: url("/images/bourbon-nav/refills@2x.png"); } }
+      @media screen and (max-width: 32.1875em) {
+        nav.bourbon a.refills {
+          background-image: none; } }
+  nav.bourbon h1 {
+    color: rgba(255, 255, 255, 0.6);
+    float: right;
+    font-size: 1em;
+    line-height: 1;
+    margin-bottom: 0; }
+    @media screen and (max-width: 56.25em) {
+      nav.bourbon h1 {
+        display: none; } }
+    nav.bourbon h1 a {
+      padding: 1em 0; }
+      nav.bourbon h1 a:hover {
+        background-color: transparent; }
+
 p {
   margin-bottom: 1em; }
 
@@ -292,21 +378,12 @@ header {
   max-width: 64em;
   margin-left: auto;
   margin-right: auto;
-<<<<<<< HEAD
-  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(100%, transparent 0, #fff0e8 0, #fff0e8 19.43277%, transparent 19.43277%, transparent 26.85574%, #fff0e8 26.85574%, #fff0e8 46.28851%, transparent 46.28851%, transparent 53.71149%, #fff0e8 53.71149%, #fff0e8 73.14426%, transparent 73.14426%, transparent 80.56723%, #fff0e8 80.56723%, #fff0e8 100%, transparent 100%));
-  background-image: -webkit-linear-gradient(left, transparent 0, #fff0e8 0, #fff0e8 19.43277%, transparent 19.43277%, transparent 26.85574%, #fff0e8 26.85574%, #fff0e8 46.28851%, transparent 46.28851%, transparent 53.71149%, #fff0e8 53.71149%, #fff0e8 73.14426%, transparent 73.14426%, transparent 80.56723%, #fff0e8 80.56723%, #fff0e8 100%, transparent 100%);
-  background-image: -moz-linear-gradient(left, transparent 0, #fff0e8 0, #fff0e8 19.43277%, transparent 19.43277%, transparent 26.85574%, #fff0e8 26.85574%, #fff0e8 46.28851%, transparent 46.28851%, transparent 53.71149%, #fff0e8 53.71149%, #fff0e8 73.14426%, transparent 73.14426%, transparent 80.56723%, #fff0e8 80.56723%, #fff0e8 100%, transparent 100%);
-  background-image: -ms-linear-gradient(left, transparent 0, #fff0e8 0, #fff0e8 19.43277%, transparent 19.43277%, transparent 26.85574%, #fff0e8 26.85574%, #fff0e8 46.28851%, transparent 46.28851%, transparent 53.71149%, #fff0e8 53.71149%, #fff0e8 73.14426%, transparent 73.14426%, transparent 80.56723%, #fff0e8 80.56723%, #fff0e8 100%, transparent 100%);
-  background-image: -o-linear-gradient(left, transparent 0, #fff0e8 0, #fff0e8 19.43277%, transparent 19.43277%, transparent 26.85574%, #fff0e8 26.85574%, #fff0e8 46.28851%, transparent 46.28851%, transparent 53.71149%, #fff0e8 53.71149%, #fff0e8 73.14426%, transparent 73.14426%, transparent 80.56723%, #fff0e8 80.56723%, #fff0e8 100%, transparent 100%);
-  background-image: linear-gradient(left, transparent 0, #fff0e8 0, #fff0e8 19.43277%, transparent 19.43277%, transparent 26.85574%, #fff0e8 26.85574%, #fff0e8 46.28851%, transparent 46.28851%, transparent 53.71149%, #fff0e8 53.71149%, #fff0e8 73.14426%, transparent 73.14426%, transparent 80.56723%, #fff0e8 80.56723%, #fff0e8 100%, transparent 100%); }
-=======
   background-image: -webkit-gradient(linear, left top, left bottom, color-stop(100%, rgba(0, 0, 0, 0) 0, #fff0e8 0, #fff0e8 19.43277%, rgba(0, 0, 0, 0) 19.43277%, rgba(0, 0, 0, 0) 26.85574%, #fff0e8 26.85574%, #fff0e8 46.28851%, rgba(0, 0, 0, 0) 46.28851%, rgba(0, 0, 0, 0) 53.71149%, #fff0e8 53.71149%, #fff0e8 73.14426%, rgba(0, 0, 0, 0) 73.14426%, rgba(0, 0, 0, 0) 80.56723%, #fff0e8 80.56723%, #fff0e8 100%, rgba(0, 0, 0, 0) 100%));
   background-image: -webkit-linear-gradient(left, rgba(0, 0, 0, 0) 0, #fff0e8 0, #fff0e8 19.43277%, rgba(0, 0, 0, 0) 19.43277%, rgba(0, 0, 0, 0) 26.85574%, #fff0e8 26.85574%, #fff0e8 46.28851%, rgba(0, 0, 0, 0) 46.28851%, rgba(0, 0, 0, 0) 53.71149%, #fff0e8 53.71149%, #fff0e8 73.14426%, rgba(0, 0, 0, 0) 73.14426%, rgba(0, 0, 0, 0) 80.56723%, #fff0e8 80.56723%, #fff0e8 100%, rgba(0, 0, 0, 0) 100%);
   background-image: -moz-linear-gradient(left, rgba(0, 0, 0, 0) 0, #fff0e8 0, #fff0e8 19.43277%, rgba(0, 0, 0, 0) 19.43277%, rgba(0, 0, 0, 0) 26.85574%, #fff0e8 26.85574%, #fff0e8 46.28851%, rgba(0, 0, 0, 0) 46.28851%, rgba(0, 0, 0, 0) 53.71149%, #fff0e8 53.71149%, #fff0e8 73.14426%, rgba(0, 0, 0, 0) 73.14426%, rgba(0, 0, 0, 0) 80.56723%, #fff0e8 80.56723%, #fff0e8 100%, rgba(0, 0, 0, 0) 100%);
   background-image: -ms-linear-gradient(left, rgba(0, 0, 0, 0) 0, #fff0e8 0, #fff0e8 19.43277%, rgba(0, 0, 0, 0) 19.43277%, rgba(0, 0, 0, 0) 26.85574%, #fff0e8 26.85574%, #fff0e8 46.28851%, rgba(0, 0, 0, 0) 46.28851%, rgba(0, 0, 0, 0) 53.71149%, #fff0e8 53.71149%, #fff0e8 73.14426%, rgba(0, 0, 0, 0) 73.14426%, rgba(0, 0, 0, 0) 80.56723%, #fff0e8 80.56723%, #fff0e8 100%, rgba(0, 0, 0, 0) 100%);
   background-image: -o-linear-gradient(left, rgba(0, 0, 0, 0) 0, #fff0e8 0, #fff0e8 19.43277%, rgba(0, 0, 0, 0) 19.43277%, rgba(0, 0, 0, 0) 26.85574%, #fff0e8 26.85574%, #fff0e8 46.28851%, rgba(0, 0, 0, 0) 46.28851%, rgba(0, 0, 0, 0) 53.71149%, #fff0e8 53.71149%, #fff0e8 73.14426%, rgba(0, 0, 0, 0) 73.14426%, rgba(0, 0, 0, 0) 80.56723%, #fff0e8 80.56723%, #fff0e8 100%, rgba(0, 0, 0, 0) 100%);
   background-image: linear-gradient(left, rgba(0, 0, 0, 0) 0, #fff0e8 0, #fff0e8 19.43277%, rgba(0, 0, 0, 0) 19.43277%, rgba(0, 0, 0, 0) 26.85574%, #fff0e8 26.85574%, #fff0e8 46.28851%, rgba(0, 0, 0, 0) 46.28851%, rgba(0, 0, 0, 0) 53.71149%, #fff0e8 53.71149%, #fff0e8 73.14426%, rgba(0, 0, 0, 0) 73.14426%, rgba(0, 0, 0, 0) 80.56723%, #fff0e8 80.56723%, #fff0e8 100%, rgba(0, 0, 0, 0) 100%); }
->>>>>>> Add links to the top of the example page to the source scss
   header:before, header:after {
     content: " ";
     display: table; }
@@ -353,7 +430,7 @@ header {
         -ms-transition: 0.25s;
         -o-transition: 0.25s;
         transition: 0.25s; }
-      header div.header-content nav.buttons a.button.examples {
+      header div.header-content nav.buttons a.button.secondary {
         background-color: #53aee0;
         background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #53aee0), color-stop(100%, #289ad8));
         background-image: -webkit-linear-gradient(top, #53aee0, #289ad8);
@@ -365,7 +442,7 @@ header {
         color: #FFF;
         text-shadow: 0px -1px #185d82;
         margin-bottom: 10px; }
-        header div.header-content nav.buttons a.button.examples:hover {
+        header div.header-content nav.buttons a.button.secondary:hover {
           background-color: #69b8e4;
           background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #69b8e4), color-stop(100%, #3da4dc));
           background-image: -webkit-linear-gradient(top, #69b8e4, #3da4dc);
